--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "keeno-cli",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Quickly scaffold node multitenant express application",
   "main": "index.js",
   "bin": {
-    "turbo": "./index.js"
+    "keeno": "./index.js"
   },
   "scripts": {
     "test": "jest --bail"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/miketerry-org/turbostart.git"
+    "url": "git+https://github.com/miketerry-org/keeno-cli.git"
   },
   "keywords": [
-    "turbo",
+    "keeno",
     "start",
     "scaffold",
     "multitenant",
